--- a/assets/views/layout/default.html
+++ b/assets/views/layout/default.html
@@ -2,5 +2,5 @@
     <p>Where our Single Page Application logic will go...</p>
 </main>
 <footer>
-    &copy; {{ app.copyright }}
+    &copy; 2020 | Digital Closuxe
 </footer>
